[tool.poetry]
name = "echoserver"
version = "0.1.0"
description = ""
authors = ["Kavi Laud <kavinath@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
trio = "^0.20.0"
hypercorn = "^0.13.2"
starlette = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pytest-trio = "^0.7.0"
httpx = "^0.22.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
trio_mode = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
