[tool.poetry]
name = "echoserver"
version = "0.1.0"
description = ""
authors = ["Kavi Laud <kavinath@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
trio = "^0.22.0"
hypercorn = "^0.14.3"
starlette = "^0.25.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-bugbear = "^22.12.6"
pre-commit = "^2.17.0"
pytest = "^7.2.0"
pytest-trio = "^0.7.0"
httpx = "^0.24.1"
pytest-cov = "^4.0.0"
pyright = "^1.1.287"
hypothesis = "^6.62.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
trio_mode = true
addopts = "--cov --cov-fail-under=100"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
